# fire-video-generator

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md  fire_timelapse.py  main.py  pyproject.toml
inputs/: example.geojson
src/: fire_timelapse.py
