[project]
name = "fire-video-generator"
version = "0.1.0"
description = "NASA FIRMS fire activity timelapse generator"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "tqdm>=4.66.0",
    "shapely>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]